tests/errors/invalid_hex_escape1.pyx

'\x1'

_ERRORS = '''
2:1: Invalid hex escape '\x'
'''
